# SEVA_GUI_MVVM

./: .gitignore  404.html  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  agent.md  dataplotter_standalone.py  index.html  layout_LDP_001.json  layout_LDP_001_2.json  layout_LDP_001_long.json  layout_LDP_001_no_legacy_long.json  layout_latest.csv  layout_latest.json  mkdocs.yml  mvvm_hexagonal_part2_view_viewmodel.ipynb  pyproject.toml  pytest.ini  requirements.txt  review_notes.md  user_settings.json
.agent/: PLANS.md
.agent/execplans/: 2025-09-22-channel-activity-devices-status.md  2026-01-27_main_simplification_execplan.md  2026-02-03_create documentation.md  2026-02-11-documentation-plan.md  2026-02-11-rest_api-documentation.md  2026-02-11-seva-adapters-documentation.md  2026-02-11-seva-app-views-documentation.md  2026-02-11-seva-domain-documentation.md  2026-02-11-seva-usecases-documentation.md  2026-02-11-seva-viewmodels-documentation.md  2026-02-12-modern-ui-overhaul.md  2026-02-12-seva-web-implementation.md  2026-02-13-remote-update-feature.md  (+4 more)
.github/: pull_request_template.md
StreamingStandalone/: api.py  client.py  update_zip_generator.py
architecture_overview/: index.html
classes_rest_api/: index.html
classes_seva/: index.html
codex_guide/: index.html
dev-setup/: index.html
docs/: architecture_overview.md  classes_rest_api.md  classes_seva.md  codex_guide.md  dev-setup.md  glossary.md  gui_overview_how_to_use.md  index.md  mvvm_hexagonal_intro.ipynb  mvvm_hexagonal_part2_view_viewmodel.ipynb  mvvm_tutorial_notebooks.md  rest-api-setup.md  troubleshooting.md  web-ui-setup.md  web_ui_migration_inventory.md  web_ui_parity_inventory.md  web_ui_runtime.md  workflows_rest_api.md  workflows_seva.md
glossary/: index.html
gui_overview_how_to_use/: index.html
mvvm_tutorial_notebooks/: index.html
rest-api-setup/: index.html
rest_api/: __init__.py  app.py  auto_flash_linux.py  mdns_service.py  nas.py  nas_smb.py  progress_utils.py  requirements.txt  storage.py  update_package.py  update_service.py  validation.py
search/: search_index.json
seva/: __init__.py
troubleshooting/: index.html
web_ui/: index.html  package.json  tsconfig.app.json  vite.config.ts
workflows_rest_api/: index.html
workflows_seva/: index.html
(+200 files in other folders)
