[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seva-gui-mvvm"
version = "1.3.2"
description = "SEVA GUI MVVM — Electrochemistry client and Raspberry Pi Box API"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "SEVA Team" }]
requires-python = ">=3.10"
keywords = ["electrochemistry", "mvvm", "fastapi", "tkinter", "pyBEEP"]
dependencies = [
  "requests>=2.31",
  "nicegui>=2.24,<3",
  "matplotlib>=3.7",
  "Pillow>=10.0",
  "numpy>=1.24",
  "fastapi>=0.100",
  "uvicorn[standard]>=0.23",
  "pydantic>=1.10,<3",
  "pyserial>=3.5",
  "python-multipart>=0.0.6",
  "mkdocs>=1.5",
  "pyBEEP @ git+https://github.com/aurelienblanc2/Potentiostat-driver-pyBEEP.git",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.setuptools.packages.find]
where = ["."]
include = ["seva*", "rest_api*"]
